# avito_python_api

./: .gitignore  .interrogate-baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  STYLEGUIDE.md  TODO.md  action_plan.md  architecture-inventory-report.json  mkdocs.yml  pyproject.toml  reference-explanation-examples-report.json  swagger_contract_backlog.md  todo.md  usability_scorecard.md
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  release.yml
avito/: __init__.py  __main__.py  _env.py  client.py  config.py  settings.py
avito/accounts/: __init__.py  client.py  domain.py  enums.py  mappers.py  models.py  operations.py
avito/ads/: __init__.py  _enums.py  _mapping.py  client.py  domain.py  enums.py  mappers.py  models.py  operations.py
avito/auth/: __init__.py  enums.py  mappers.py  models.py  provider.py  settings.py
avito/autoteka/: __init__.py  client.py  domain.py  enums.py  mappers.py  models.py  operations.py
avito/client/: __init__.py  client.py
avito/core/: __init__.py  deprecation.py  domain.py  enums.py  exceptions.py  fields.py  mapping.py  models.py  operations.py  pagination.py  payload.py  rate_limit.py  retries.py  serialization.py  swagger.py  swagger_discovery.py  swagger_factory_map.py  swagger_linter.py  swagger_names.py  swagger_registry.py  swagger_report.py  swagger_schema_paths.py  transport.py  types.py  validation.py
avito/cpa/: __init__.py  client.py  domain.py  enums.py  mappers.py  models.py  operations.py
avito/jobs/: __init__.py  client.py  domain.py  enums.py  mappers.py  models.py  operations.py
avito/messenger/: __init__.py  client.py  domain.py  enums.py  mappers.py  models.py  operations.py
avito/orders/: __init__.py  _client.py  _enums.py  _mapping.py  client.py  domain.py  enums.py  mappers.py  models.py  operations.py
avito/promotion/: __init__.py  _mapping.py  client.py  domain.py  enums.py  mappers.py  (+2 more)
docs/: CPA-аукцион.json  CPAАвито.json  CallTracking[КТ].json  index.md  inventory.md  release.md  АвитоРабота.json  Автозагрузка.json  Автостратегия.json  Автотека.json  Доставка.json  ИерархияАккаунтов.json  Информацияопользователе.json  Краткосрочнаяаренда.json  Мессенджер.json  Объявления.json  Рассылкаскидокиспецпредложенийвмессенджере.json  Рейтингииотзывы.json  Управлениезаказами.json  Управлениеостатками.json
scripts/: build_docs_quality_report.py  check_changelog_sections.py  check_docs_examples.py  check_interrogate_gate.py  check_inventory_coverage.py  check_public_docstrings.py  check_readme_domain_coverage.py  check_reference_public_surface.py  check_spec_inventory_sync.py  download_avito_api_specs.py  fetch_swagger_diff.py  inventory_architecture.py  lint_architecture.py  lint_swagger_bindings.py  parse_inventory.py  public_sdk_surface.py
tests/: conftest.py  fake_transport.py  test_auth.py  test_calltracking_contract_alignment.py  test_config.py  test_core.py  test_download_avito_api_specs.py  test_facade.py  test_inventory.py  test_inventory_architecture.py  test_no_raw_payload_contract.py  test_no_valueerror_in_public_surface.py  test_promotion_contract_alignment.py  test_public_api_shape.py  test_public_models.py  test_read_contract.py  test_readme_examples.py  test_realty_contract_alignment.py  test_stage10_autoteka.py  test_stage11_mock_transport_suite.py  test_stage11_realty_ratings_tariffs.py  test_stage12_release_gate.py  test_stage4_accounts_ads.py  test_stage4_datetime_domain_inputs.py  test_stage4_promotion_write_contract.py  test_stage5_datetime_model_mapping.py  test_stage5_messenger.py  test_stage5_promotion_read_contract.py  test_stage6_autostrategy_list_signature.py  test_stage6_error_model.py  test_stage6_promotion.py  test_stage7_orders.py  test_stage8_jobs.py  test_stage8_serialization_contract.py  test_stage9_cpa.py  test_stage9_transport_isolation.py
(+140 files in other folders)
