[tool.poetry]
name = "avito-py"
version = "1.0.2"
description = "SDK для разработки инструментов на базе Avito API"
authors = ["Nikolay Baryshnikov <root@k0d.ru>"]
packages=[
    { include = "avito" },
]
license="MIT"
readme="README.md"
homepage="https://github.com/p141592/avito"
repository="https://github.com/p141592/avito"
keywords=["avito", "sdk", "python", "api"]
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: Russian",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.14",
]

[tool.poetry.dependencies]
python = "^3.14"
httpx = "^0.28.1"
backoff = "^2.2.1"
loguru = "^0.7.3"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.18.2"
ruff = "^0.12.12"
respx = "^0.22.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_any_generics = true
no_implicit_optional = true
packages = ["avito"]
exclude = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = [
    "E501",
    "UP038",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
