[tool.poetry]
name = "avito-py"
version = "1.0.2"
description = "SDK для разработки инструментов на базе Avito API"
authors = ["Nikolay Baryshnikov <root@k0d.ru>"]
packages=[
    { include = "avito" },
]
license="MIT"
readme="README.md"
homepage="https://github.com/p141592/avito_python_api"
repository="https://github.com/p141592/avito_python_api"
documentation="https://p141592.github.io/avito_python_api/"
keywords=["avito", "sdk", "python", "api"]
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: Russian",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.14",
]

[tool.poetry.dependencies]
python = "^3.14"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.10.6"
mypy = "^1.18.2"
ruff = "^0.12.12"
respx = "^0.22.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5"
mkdocs-awesome-pages-plugin = "^2.9"
mkdocs-include-markdown-plugin = "^7.0"
mike = "^2.1"
mkdocstrings = { version = ">=0.27", extras = ["python"] }
mkdocs-gen-files = ">=0.5"
mkdocs-literate-nav = ">=0.6"
mktestdocs = "^0.2.5"
bandit = ">=1.7"
interrogate = ">=1.7"
pydocstyle = { version = ">=6.3", extras = ["toml"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
markers = [
    "live: требует доступа к сети; запускать с --live",
]

[tool.coverage.run]
branch = true
source = ["avito"]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_any_generics = true
no_implicit_optional = true
packages = ["avito"]
exclude = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = [
    "E501",
    "UP038",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pydocstyle]
convention = "google"
add_ignore = ["D202", "D105", "D107"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
